--- a/.github/workflows/ejecucion_actividades.yml
+++ b/.github/workflows/ejecucion_actividades.yml
@@ -34,6 +34,6 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: entrega actividad 1
-          commit_user_name: Naudith Florez [GitHub Actions]
+          commit_user_name: Naudith_Florez_B [GitHub Actions]
           commit_user_email: Naudith.florez@est.iudigital.edu.co
           commit_author: Naudith florez <Naudith.florez.est@iudigital.edu.co>
